nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-webserver
  name: nginx-webserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-webserver
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-webserver
    spec:
      containers:
      - image: nginx
        name: nginx
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "400m"
            memory: "1024Mi"
status: {}
