game-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: game-2048
spec:
    ingressClassName: ngrok
    rules:
        - host: fond-sensibly-sloth.ngrok-free.app
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: game-2048
                        port:
                            number: 80
